samples/_failures_safe/1761636208_5360f1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d4631dfc.c: In function ‘main’:
./samples/SAFE/__tmp_d4631dfc.c:169:5: error: expected expression at end of input
  169 |     for (size_t i =
      |     ^~~
./samples/SAFE/__tmp_d4631dfc.c:169:5: error: expected declaration or statement at end of input
